<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="me.joelbraun.mbandtools.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/SampleRateLabel"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/SampleRateDescription"
            android:id="@+id/textView7" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SampleRateSelect">
            <RadioButton android:layout_width="wrap_content"
                android:id="@+id/sample16" android:layout_height="wrap_content"
                android:checked="true" android:text="16 ms Samples (fastest)"></RadioButton>
            <RadioButton android:id="@+id/sample32"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="32 ms Samples"></RadioButton>
            <RadioButton android:layout_width="wrap_content"
                android:id="@+id/sample128" android:layout_height="wrap_content"
                android:text="128 ms Samples (slowest)"></RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/DataCollectionLabel"
            android:id="@+id/DataCollectionLabel"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DataCollectionDetails"
            android:id="@+id/DataCollectionDetails"
            android:layout_marginTop="2dp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DataCollectionRateSelect">
            <RadioButton android:layout_width="wrap_content"
                android:id="@+id/send500" android:layout_height="wrap_content"
                android:checked="true" android:text="500 ms"></RadioButton>
            <RadioButton android:id="@+id/send1000"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="1 s"></RadioButton>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TempOptionTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Temperature Mode"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/TempModeDesc"
            android:id="@+id/SkinTempModeDesc" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TempSelect">
            <RadioButton android:layout_width="wrap_content"
                android:id="@+id/CelsSelect" android:layout_height="wrap_content"
                android:checked="true" android:text="Celsius"></RadioButton>
            <RadioButton android:id="@+id/FahrSelect"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="Fahrenheit"></RadioButton>
        </RadioGroup>

    </LinearLayout>
</FrameLayout>
